--- a/README.rdoc
+++ b/README.rdoc
@@ -48,26 +48,34 @@ every server you deploy to has the gem installed or your application won't start
 
 === Rails 1.2.6
 
-Install the hoptoad_notifier Gem. Once installed, you should 
-vendor the hoptoad_notifier gem.
+Install the hoptoad_notifier gem: 
 
+  gem install hoptoad_notifier
+
+Once installed, you should vendor the hoptoad_notifier gem:
+
+  mkdir vendor/gems
   cd vendor/gems
-  gems unpack hoptoad_notifier
+  gem unpack hoptoad_notifier
 
-And then add the following to the 
-Rails::Initializer.run do |config| block in environment.rb
+And then add the following to the `Rails::Initializer.run do |config|`
+block in environment.rb so that the vendored gem is loaded.
 
   # Add the vendor/gems/*/lib directories to the LOAD_PATH
   config.load_paths += Dir.glob(File.join(RAILS_ROOT, 'vendor', 'gems', '*', 'lib'))
 
 Next add something like this at the bottom of your config/environment.rb:
 
+  require 'hoptoad_notifier'
+  require 'hoptoad_notifier/rails'
   HoptoadNotifier.configure do |config|
     config.api_key = 'your_key_here'
   end
 
 You will also need to copy the hoptoad_notifier_tasks.rake file into your
-RAILS_ROOT/lib/tasks directory in order for the rake hoptoad:test task to work.
+RAILS_ROOT/lib/tasks directory in order for the rake hoptoad:test task to work:
+
+$ cp vendor/gems/hoptoad_notifier-2.1.3/generators/hoptoad/templates/hoptoad_notifier_tasks.rake lib/tasks 
 
 As always, if you choose not to vendor the hoptoad_notifier gem, make sure
 every server you deploy to has the gem installed or your application won't start.
