--- a/README.rdoc
+++ b/README.rdoc
@@ -58,7 +58,7 @@ Once installed, you should vendor the hoptoad_notifier gem:
   cd vendor/gems
   gem unpack hoptoad_notifier
 
-And then add the following to the `Rails::Initializer.run do |config|`
+And then add the following to the Rails::Initializer.run do |config|
 block in environment.rb so that the vendored gem is loaded.
 
   # Add the vendor/gems/*/lib directories to the LOAD_PATH
@@ -75,7 +75,7 @@ Next add something like this at the bottom of your config/environment.rb:
 You will also need to copy the hoptoad_notifier_tasks.rake file into your
 RAILS_ROOT/lib/tasks directory in order for the rake hoptoad:test task to work:
 
-$ cp vendor/gems/hoptoad_notifier-2.1.3/generators/hoptoad/templates/hoptoad_notifier_tasks.rake lib/tasks 
+  cp vendor/gems/hoptoad_notifier-2.1.3/generators/hoptoad/templates/hoptoad_notifier_tasks.rake lib/tasks 
 
 As always, if you choose not to vendor the hoptoad_notifier gem, make sure
 every server you deploy to has the gem installed or your application won't start.
