--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,42 @@
+Version 2.1.5 - 2010-02-18
+===============================================================================
+
+Summary:
+      Fixed issues related to Rails 1.2.6
+      Added support for Rack
+      Refactoring
+      Added changeling for automatic CHANGELOG management
+
+Details:
+
+Chad Pytel (2):
+      add more info to README for 1.2.6
+      fix gem unpack line for 1.2.6
+
+Jason Morrison (2):
+      Adding additional instructions for Rails 1.2.6
+      Typesetting in README.rdoc
+
+Joe Ferris (11):
+      Separating Rails functionality out more
+      Initial Rack middleware
+      Extract request info from rack env
+      Added integration tests for rescuing
+      Fixed reporting of Rails version
+      Small refactoring
+      Automatically add Rack middleware for Rails apps that support it (catches exceptions from Metal)
+      Added an integration test and docs for rack apps
+      Added integration/readme coverage of Sinatra apps
+      Added docs to HoptoadNotifier::Rack
+      Require rack in tests for older versions of Rails; use active_support instead of activesupport
+
+Nick Quaranto (4):
+      Fixing the capistrano hook bit in the readme
+      Adding changeling:minor and changeling:patch to automate notifier releases
+      Adding rake changeling:push
+      Bumping to version 2.1.4
+
+
 Version 2.1.4 - 2010-02-12
 ===============================================================================
 
@@ -26,6 +65,7 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
 
