--- a/README.rdoc
+++ b/README.rdoc
@@ -2,7 +2,7 @@
 
 This is the notifier gem for integrating apps with Hoptoad.
 
-When an uncaught exception occurs, HoptoadNotifier will POST the relevant data 
+When an uncaught exception occurs, HoptoadNotifier will POST the relevant data
 to the Hoptoad server specified in your environment.
 
 == Help
@@ -48,7 +48,7 @@ every server you deploy to has the gem installed or your application won't start
 
 === Rails 1.2.6
 
-Install the hoptoad_notifier gem: 
+Install the hoptoad_notifier gem:
 
   gem install hoptoad_notifier
 
@@ -75,19 +75,53 @@ Next add something like this at the bottom of your config/environment.rb:
 You will also need to copy the hoptoad_notifier_tasks.rake file into your
 RAILS_ROOT/lib/tasks directory in order for the rake hoptoad:test task to work:
 
-  cp vendor/gems/hoptoad_notifier-2.1.3/generators/hoptoad/templates/hoptoad_notifier_tasks.rake lib/tasks 
+  cp vendor/gems/hoptoad_notifier-*/generators/hoptoad/templates/hoptoad_notifier_tasks.rake lib/tasks
 
 As always, if you choose not to vendor the hoptoad_notifier gem, make sure
 every server you deploy to has the gem installed or your application won't start.
 
+=== Upgrading From Earlier Versions of Hoptoad
+
+If you're currently using the plugin version (if you have a
+vendor/plugins/hoptoad_notifier directory, you are), you'll need to perform a
+few extra steps when upgrading to the gem version.
+
+Add the hoptoad_notifier gem to your app. In config/environment.rb:
+
+    config.gem 'hoptoad_notifier'
+
+Remove teh plugin:
+
+    rm -rf vendor/plugins/hoptoad_notifier
+
+Before running the hoptoad generator, you need to find your project's API key.
+Log in to your account at hoptoadapp.com, and click on the "Projects" button.
+Then, find your project in the list, and click on its name. In the left-hand
+column, you'll see an "Edit this project" button. Click on that to get your
+project's API. (If you accidentally use your personal API auth_token, you won't
+be able to install the gem.)
+
+Then from your project's RAILS_ROOT, run:
+
+    rake gems:install
+    script/generate hoptoad --api-key your_key_here
+
+Once installed, you should vendor the hoptoad_notifier gem.
+
+    rake gems:unpack GEM=hoptoad_notifier
+
+As always, if you choose not to vendor the hoptoad_notifier gem, make sure
+every server you deploy to has the gem installed or your application won't
+start.
+
 === Testing it out
 
-You can test that Hoptoad is working in your production environment by using 
+You can test that Hoptoad is working in your production environment by using
 this rake task (from RAILS_ROOT):
 
   rake hoptoad:test
 
-If everything is configured properly, that task will send a notice to Hoptoad 
+If everything is configured properly, that task will send a notice to Hoptoad
 which will be visible immediately.
 
 == Rack
@@ -131,11 +165,11 @@ to disable Sinatra's error rescuing functionality:
 
 == Usage
 
-For the most part, Hoptoad works for itself.  Once you've included the notifier 
-in your ApplicationController (which is now done automatically by the gem), 
+For the most part, Hoptoad works for itself.  Once you've included the notifier
+in your ApplicationController (which is now done automatically by the gem),
 all errors will be rescued by the #rescue_action_in_public provided by the gem.
 
-If you want to log arbitrary things which you've rescued yourself from a 
+If you want to log arbitrary things which you've rescued yourself from a
 controller, you can do something like this:
 
   ...
@@ -175,7 +209,7 @@ controllers:
 
   begin
     params = {
-      # params that you pass to a method that can throw an exception 
+      # params that you pass to a method that can throw an exception
     }
     my_unpredicable_method(params)
   rescue => e
@@ -208,11 +242,11 @@ You can override any of those parameters.
 
 == Filtering
 
-You can specify a whitelist of errors, that Hoptoad will not report on.  Use 
-this feature when you are so apathetic to certain errors that you don't want 
+You can specify a whitelist of errors, that Hoptoad will not report on.  Use
+this feature when you are so apathetic to certain errors that you don't want
 them even logged.
 
-This filter will only be applied to automatic notifications, not manual 
+This filter will only be applied to automatic notifications, not manual
 notifications (when #notify is called directly).
 
 Hoptoad ignores the following exceptions by default:
@@ -223,7 +257,7 @@ Hoptoad ignores the following exceptions by default:
   ActionController::UnknownAction
   CGI::Session::CookieStore::TamperedWithCookie
 
-To ignore errors in addition to those, specify their names in your Hoptoad 
+To ignore errors in addition to those, specify their names in your Hoptoad
 configuration block.
 
   HoptoadNotifier.configure do |config|
@@ -231,7 +265,7 @@ configuration block.
     config.ignore       << ActiveRecord::IgnoreThisError
   end
 
-To ignore *only* certain errors (and override the defaults), use the 
+To ignore *only* certain errors (and override the defaults), use the
 #ignore_only attribute.
 
   HoptoadNotifier.configure do |config|
@@ -270,8 +304,8 @@ hoptoad_notifier will reuse filters specified by #filter_params_logging.
 == Testing
 
 When you run your tests, you might notice that the Hoptoad service is recording
-notices generated using #notify when you don't expect it to.  You can 
-use code like this in your test_helper.rb to redefine that method so those 
+notices generated using #notify when you don't expect it to.  You can
+use code like this in your test_helper.rb to redefine that method so those
 errors are not reported while running tests.
 
   module HoptoadNotifier
