--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,52 @@
+Version 2.2.3 - 2010-06-02
+===============================================================================
+
+Summary: Fixed a variety of issues for Rails 3.0.0.beta3,
+         Fixed a bug when using Vlad to deploy instead of Capistrano
+         Give better error output when gem is not installed
+
+Chad Pytel (2):
+      revise gem unpack instructions step
+      Merge branch 'master' of github.com:thoughtbot/hoptoad_notifier
+
+Dan Lawless (1):
+      don't append capistrano details to config.deploy.rb when target app uses Vlad
+
+Jason Morrison (7):
+      LH-556 Clarify sending ENV environment variables
+      Starting to add features for Rails 3
+      Make rails rake tasks depend on gem-making tasks
+      Start to get Rails 3 features to pass
+      require fileutils to reflect rubygems 1.3.6 change
+      Support ENV['CUCUMBER_FORMAT'] in rails cucumber tasks for testing
+      Fix the initializer syntax in the Rails 3 Railtie
+
+Joe Ferris (11):
+      Got the generator running and a request dispatched to the test endpoint
+      Fixed logging in hoptoad:test rake task
+      Separated Rails 2 and 3 entry
+      Support bundler
+      Rails 3 generator works with an existing api key
+      Extract request info from rack env
+      Detect presence of the plugin
+      Added a capistrano hook for Rails 3
+      Fixed rack/sinatra being broken without active_support
+      Fixes for earlier versions of Rails
+      Fixed Rails 3 generator not to append cap hooks for vlad deploys
+
+Josh Kalderimis (7):
+      updated railtie to work with the new rails 3 middleware api
+      railtie_name is deprecated
+      updated app_middleware call to use string version as to make sure constant is loaded
+      moved generator using the new rails 3 convention
+      update path to template for Rails 3 generator
+      correction to referencing of the rails application in rails3_tasks
+      add environment_name and project_root back to rails 3 railtie
+
+Joshua Nichols (1):
+      Handle gem not being installed more gracefully.
+
+
 Version 2.2.2 - 2010-03-10
 ===============================================================================
 
@@ -67,6 +116,7 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
 
