--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+Version 2.2.4 - 2010-06-02
+===============================================================================
+
+Jason Morrison (1):
+      Add a note to README about removing the explicit Catcher #include in ApplicationController
+
+
 Version 2.2.3 - 2010-06-02
 ===============================================================================
 
@@ -116,6 +123,7 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
 
