--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+Version 2.2.5 - 2010-06-02
+===============================================================================
+
+Jason Morrison (1):
+      Add documentation for Rails 3.x installation
+
+
 Version 2.2.4 - 2010-06-02
 ===============================================================================
 
@@ -123,6 +130,7 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
 
