--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,14 @@
+Version 2.3.0 - 2010-06-24
+===============================================================================
+
+Jason Morrison (5):
+      Add integration test for rails 3.0.0.beta4
+      Added feature: Support the Heroku addon in the generator
+      Add --heroku flag to generator to support ENV['HOPTOAD_API_KEY']
+      Reflect a copy change in rails.feature for --heroku generator flag
+      Support the proxy configuration options when notifying Hoptoad of a deploy (hat tip @gudleik)
+
+
 Version 2.2.6 - 2010-06-02
 ===============================================================================
 
@@ -137,6 +148,7 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
 
