--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+Version 2.3.2 - 2010-07-06
+===============================================================================
+
+Josh Clayton(1):
+      Handle instances when Rack's action_dispach.parameter_filter is nil
+
+
 Version 2.3.1 - 2010-07-02
 ===============================================================================
 
