--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+Version 2.3.3 - 2010-08-04
+===============================================================================
+
+Tristan Dunn (1):
+      Initial injection of JS notifier.
+
+
 Version 2.3.2 - 2010-07-06
 ===============================================================================
 
@@ -163,6 +170,7 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
 
