--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,43 @@
+Version 2.3.13 - Mon Jan 03 15:56:20 -0500 2011
+===============================================================================
+
+Dan Croak (1):
+      including twiddle wakka in install instructions
+
+Emma Lindsay (5):
+      Sends more javascript information back to hoptaod
+      Merge branch 'js_notifier_default_fields'
+      Bumping to version 2.3.10
+      Updated jferris-mocha to bourne
+      Update readme to show quotes around error names in ignores
+
+Jason Morrison (8):
+      wip: Supply default url, component, action for JS notifier
+      gracefully fall back to require 'activesupport' if require 'active_support' fails
+      Add non-capistrano deploy instructions
+      Add instructions for heroku gem to Heroku addon README
+      Add AbstractController::ActionNotFound to default ignore list
+      Bumping to version 2.3.12
+      Bugfix: JS Notifier will now insert itself even when <head> tag has attributes
+      Add Heroku deploy notification
+
+Jon Yurek (11):
+      Require bourne, run right cucumber task
+      Get the API key from Heroku
+      Bumped version: 2.3.11
+      Getting green cucumber stories
+      Fakes out the heroku command for cucumber.
+      Mount the metal endpoint in Rails 3 tests.
+      Metal test mounts at /metal
+      Supported versions: 2.3.9, 2.3.10, and 3.0.1
+      Return non-zero on cucumber failure.
+      Controller info for older Rails-es is different.
+      Remove Rails 2.0.2 from official support. Added 3.0.2+3
+
+Trevor Turk (1):
+      Fix default ignores in the README
+
+
 Version 2.3.12 - Wed Nov 03 13:53:18 -0400 2010
 ===============================================================================
 
@@ -287,6 +327,7 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
 
