--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+Version 2.4.0 - Thu Jan 06 15:03:58 -0500 2011
+===============================================================================
+
+Jason Morrison (1):
+      Remove official support for very old Rails version going forward
+
 Version 2.3.14 - Wed Jan 05 14:06:12 -0500 2011
 ===============================================================================
 
@@ -333,6 +339,7 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
 
