--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+Version 2.4.2 - Sun Jan 09 09:37:31 -0500 2011
+===============================================================================
+
+Matt Jankowski (1):
+      fix issue where the gsub to replace the html head with javascript was removing the head element entirely
+
+
 Version 2.4.1 - Sat Jan 08 12:17:15 -0500 2011
 ===============================================================================
 
@@ -346,6 +353,7 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
 
