--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+Version 2.4.4 - Fri Jan 28 13:50:10 -0500 2011
+===============================================================================
+
+Matt Jankowski (1):
+      Change the javascript notifier from a config option to a helper method
+
+Jonathan Yurek (1):
+      Show the javascript notifier prevents XSS attempts from request.url
+
 Version 2.4.3 - Wed Jan 26 11:35:15 -0500 2011
 ===============================================================================
 
@@ -360,6 +369,7 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
 
