--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+Version 2.4.5 - Wed Feb 02 13:24:29 -0500 2011
+===============================================================================
+
+Jonathan Yurek (1):
+      Don't require Rack::Lock's presence in the middleware for UserInformer
+
+
 Version 2.4.4 - Fri Jan 28 13:50:10 -0500 2011
 ===============================================================================
 
@@ -369,6 +376,7 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
 
