--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+Version 2.4.6 - Tue Feb 15 15:51:17 -0500 2011
+===============================================================================
+
+Jonathan Yurek(1):
+      Modify the error page's body in-place.
+
 Version 2.4.5 - Wed Feb 02 13:24:29 -0500 2011
 ===============================================================================
 
@@ -376,6 +382,7 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
 
