--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+Version 2.4.7 - Thu Mar 10 16:21:31 -0500 2011
+===============================================================================
+
+Jonathan Yurek(1):
+      Rails generator requires './config/boot' for 1.9.2 compatibility.
+
 Version 2.4.6 - Tue Feb 15 15:51:17 -0500 2011
 ===============================================================================
 
@@ -382,6 +388,7 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
 
