--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+Version 2.4.8 - Mon Mar 21 11:11:16 -0400 2011
+===============================================================================
+
+Jonathan Yurek(1):
+      Prevent infinite loops from recursive data structures.
+
 Version 2.4.7 - Thu Mar 10 16:21:31 -0500 2011
 ===============================================================================
 
@@ -388,6 +394,7 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
 
