--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+Version 2.4.9 - Wed Mar 30 09:04:53 -0400 2011
+===============================================================================
+
+Jonathan Yurek(1):
+      The User Informer should adhere to only the Rack spec.
+
 Version 2.4.8 - Mon Mar 21 11:11:16 -0400 2011
 ===============================================================================
 
@@ -394,6 +400,7 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
 
