--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+Version 3.0.rc1 - Fri Aug 19 08:51:53 -0400 2011
+===============================================================================
+
+Jonathan Yurek and Harold Gimenez
+      Rename to Airbrake
+
 Version 2.4.9 - Wed Mar 30 09:04:53 -0400 2011
 ===============================================================================
 
@@ -400,6 +406,7 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
 
