--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+Version 3.0.rc2 - Wed Aug 24 15:03:46 -0400 2011
+===============================================================================
+
+Harold Gimenez:
+    Revert broken commit around exceptions that respond to #to_hash
+    Support latest versions of Rails.
+
+
 Version 3.0.rc1 - Fri Aug 19 08:51:53 -0400 2011
 ===============================================================================
 
@@ -406,6 +414,7 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
 
