--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Version 3.0 - Fri Aug 26 08:55:47 -0400 2011
+===============================================================================
+Harold Gimenez:
+    Continue to use HOPTOAD_API_KEY for heroku users' API key env variable
+
 Version 3.0.rc2 - Wed Aug 24 15:03:46 -0400 2011
 ===============================================================================
 
@@ -414,6 +419,7 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
 
