--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Version 3.0.1 - Mon Aug 29 08:37:24 -0400 2011
+===============================================================================
+Roman Shterenzon(1):
+    Use either Airbrake or Hoptoad object on javascript notifier
+
 Version 3.0 - Fri Aug 26 08:55:47 -0400 2011
 ===============================================================================
 Harold Gimenez:
@@ -419,6 +424,7 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
 
