--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Version 3.0.2 - Mon Aug 29 10:32:04 -0400 2011
+===============================================================================
+Harold Gimenez(1)
+    Fix bug on the Hoptoad to Airbrake fallback code on the javascript notifier.
+
 Version 3.0.1 - Mon Aug 29 08:37:24 -0400 2011
 ===============================================================================
 Roman Shterenzon(1):
@@ -424,6 +429,7 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
 
