--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+Version 3.0.3 - Sat Sep 03 13:18:26 -0400 2011
+===============================================================================
+David Czarnecki(1):
+    Use capistrano's logger, improve tests around capistrano deploy.
+Florent Guilleux(1):
+    README updates
+
 Version 3.0.2 - Mon Aug 29 10:32:04 -0400 2011
 ===============================================================================
 Harold Gimenez(1)
@@ -429,6 +436,7 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
 
