--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,93 @@
+Version 3.0.6 - Mon Dec 05 16:41:39 +0100 2011
+===============================================================================
+
+Benjamin Quorning (1):
+      README updated to reflect name change from Hoptoad to Airbrake
+
+Darcy Laycock (1):
+      Explicitly scope calls to Rails.env and such to prevent loading issues when manually requiring parts of airbrake.
+
+David (1):
+      Merge pull request #42 from Playhem/fix-issue-34-cherrypicked
+
+David Czarnecki (6):
+      Using the Capistrano logger for great justice
+      Using the Capistrano logger for great justice
+      Re-organized capistrano task to allow for testing
+      Fixing conflict
+      Fixed the name of the capistrano task in the test to be correct. Updated the cucumber feature to look for the right task name.
+      Change airbrake:notify to airbrake:deploy to be more clear that it is a deploy notification
+
+David Palm (8):
+      Removes support for Rails v2.3.12
+      Documentation glitch
+      Documenting workaround for issue #39
+      Using guard&spork for testing
+      Adding Guardfile
+      Moves #assert_logged to test helper
+      Moves http setup code to own method
+      Not sporking yet
+
+Florent Guilleux (1):
+      Change Hoptoad references to Airbrake.
+
+Gabe Berke-Williams (1):
+      Merge pull request #10 from Florent2/patch-1
+
+Harold Giménez (10):
+      Heroku is still using HOPTOAD_API_KEY, so expect that for now
+      Bumping to version 3.0
+      Bumping to version 3.0.1
+      Fix bug in defining the Airbrake javascript object
+      Bumping to version 3.0.2
+      Ensure a valid configuration object is always available on Airbrake.configuration
+      Merge remote-tracking branch 'agoragames/master'
+      Bumping to version 3.0.3
+      Minor fix to Gemfile instructions on README
+      Bumping to version 3.0.4
+
+Jonathan Siegel (16):
+      Removed class-level caching per jkraemer: Hi,
+      Integrated pulls and updated tests.
+      Integrated: https://github.com/thoughtbot/hoptoad_notifier/pull/37
+      Corrected test.
+      Consistent operation.
+      Consistent callout during test generation.
+      Fixed typo.
+      Refreshed supported.
+      Resolved: http://help.airbrakeapp.com/discussions/questions/587-airbrake_javascript_notifier-is-escaped-rails-31-haml
+      Now running airbrake deploy notifications on the REMOTE machine.
+      Added first rev of PEER cert resolution.
+      Bumped 3.0.5
+      Updated README, fixed JS rescue template missed HT reference.
+      Crosslinked docs...
+      Fixes for tests.
+      Bumping to version 3.0.5
+
+Leonid Shevtsov (3):
+      fixed rake handler failing when exception happens before Airbrake has been configured (for example, when running an unknown Rake task)
+      fix issue #34 'undefined method to_backtrace for Hash'
+      test case for issue #34
+
+Matt Fawcett (1):
+      Call #close on the old body after building the new body to prevent thread joining errors
+
+Roman Shterenzon (1):
+      Use either Airbrake or Hoptoad object.
+
+Stuart Chaney (1):
+      point towards airbrake.io
+
+Thomas Jachmann (1):
+      handles exceptions with #to_hash properly
+
+usiegj00 (4):
+      Merge pull request #21 from mattfawcett/master
+      Merge pull request #12 from leonid-shevtsov/master
+      Merge pull request #14 from thomasjachmann/master
+      Merge pull request #28 from Sutto/patch-1
+
+
 Version 3.0.5 - 2011-11-08 23:02:07 -0800
 ===============================================================================
 
@@ -518,5 +608,6 @@ Nick Quaranto (3):
       Fixing the capistrano hook bit in the readme
       Adding changeling:minor and changeling:patch to automate notifier releases
       Adding rake changeling:push
+
 
 
